# guidance-for-supporting-video-analysis-as-a-service-on-aws

./: .gitignore  README.md
assets/: .gitignore  DEVELOPMENT.md
assets/lambda-built/video-logistics-assets/: generated-placeholder.tmp
assets/model/common/: classpath.json
assets/model/video-logistics/: classpath.json
deployment/: DEVELOPMENT.md  README.md  package-lock.json  package.json  tsconfig.json
deployment/common-constructs/VideoAnalyticsCommonConstruct/: .gitignore  DEVELOPMENT.md  README.md  cdk.json  index.ts  package-lock.json  package.json  tsconfig.json
deployment/device-management-cdk/VideoAnalyticsDeviceManagementCDK/: DEVELOPMENT.md  cdk.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
deployment/models/video-analytics/: README.md  smithy-build.json
deployment/video-logistics-cdk/VideoAnalyticsVideoLogisticsCDK/: .gitignore  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
implementation_guide/: README.md
implementation_guide/Command/: Command_IG.md  pom.xml
models/video-analytics/: smithy-build.json
s3_sdk_on_lambda/: pom.xml
source/: README.md
source/device-management/: .gitignore
source/device-management/VideoAnalyticsDeviceManagementControlPlane/: .gitignore  DEVELOPMENT.md  README.md  build.gradle  pom.xml  settings.gradle
source/device-management/VideoAnalyticsDeviceManagementJavaClient/: README.md  build.gradle  settings.gradle
source/edge/: .gitignore  Cargo.toml  DEVELOPMENT.md  rustfmt.toml
source/edge/crates/device-traits/: Cargo.toml
source/edge/crates/device-traits/src/: command.rs  connections.rs  constants.rs  lib.rs  merge.rs  state.rs
source/edge/crates/device-traits/src/channel_utils/: error.rs  global_settings.rs  mod.rs  traits.rs
source/edge/crates/edge-process/: Cargo.toml
source/edge/crates/edge-process/src/: config.rs  constants.rs  device_state.rs  device_streaming_config.rs  device_thumbnail.rs  lib.rs
source/edge/crates/edge-process/src/connections/: aws_iot.rs  mod.rs
source/edge/crates/edge-process/src/data_storage/: error.rs  log_metadata_storage.rs  mod.rs
source/edge/crates/edge-process/src/log_sync/: log_sync.rs  mod.rs
source/edge/crates/edge-process/src/utils/: args.rs  logger_setup.rs  mod.rs
source/edge/crates/edge-process/src/utils/config/: mod.rs  settings.rs
source/edge/crates/edge-process/tests/test_config/: test_streaming_config.yaml
source/edge/crates/event-processor/: Cargo.toml
source/edge/crates/event-processor/src/: constants.rs  lib.rs  onvif_metadata_processor.rs
source/edge/crates/gstreamer-pipeline/: Cargo.toml
source/edge/crates/gstreamer-pipeline/src/: catchup_service.rs  constants.rs  event_ingestion.rs  event_processor.rs  lib.rs  metadata_streaming_pipeline.rs  util.rs
source/edge/crates/gstreamer-pipeline/src/data_storage/: constants.rs  error.rs  media_storage.rs  mod.rs  video_storage.rs
source/edge/crates/gstreamer-pipeline/src/hybrid_streaming_service/: catchup_video_service.rs  device_timeline.rs  forwarding_service.rs  fragment.rs  frame.rs  message_service.rs  mod.rs  offline_cloud_ingestion.rs  real_time_cloud_ingestion.rs  rtsp_pipeline.rs
source/edge/crates/gstreamer-pipeline/src/hybrid_streaming_service/kvs_callbacks/: fragment_ack.rs  mod.rs
source/edge/crates/http-client/: Cargo.toml
source/edge/crates/http-client/src/: client.rs  error.rs  lib.rs
source/edge/crates/iot-client/: Cargo.toml
source/edge/crates/iot-client/src/: client.rs  error.rs  http.rs  lib.rs  response_structs.rs
source/edge/crates/iot-connections/: Cargo.toml
source/edge/crates/iot-connections/src/: constants.rs  lib.rs
source/edge/crates/iot-connections/src/client/: command.rs  configuration.rs  mod.rs  registration.rs  snapshot.rs  streaming.rs  topics.rs
source/edge/crates/iot-connections/src/shadow_manager/: mod.rs
source/edge/crates/iot-connections/tests/: lib.rs
source/edge/crates/iot-connections/tests/files-for-integration-tests/: connections-config.yaml  integration-test-CA1.crt  integration-test-private.pem.key  integration-test.pem.crt  reboot_job_execution_in_progress_test_file
source/edge/crates/iot-connections/tests/shadow_manager/: mod.rs
source/edge/crates/kvs-client/: Cargo.toml
source/edge/crates/kvs-client/src/: client.rs  error.rs
source/edge/crates/mqtt-client/: Cargo.toml
source/edge/crates/mqtt-client/src/: builder.rs  client.rs  client_settings.rs  error.rs  lib.rs  message.rs
source/edge/crates/onvif-client/: Cargo.toml
source/edge/crates/onvif-client/src/: lib.rs
source/edge/crates/onvif-client/src/client/: constant.rs  digest_auth.rs  error.rs  mod.rs  onvif_client.rs  onvif_service.rs
source/edge/crates/onvif-client/src/config/: mod.rs
source/edge/crates/onvif-client/src/soap/: mod.rs  serialization_error.rs
source/edge/crates/onvif-client/src/wsdl_rs/: appmgmt.rs  devicemgmt.rs  media.rs  media20.rs  mod.rs
source/edge/crates/onvif-client/src/xsd_rs/: mod.rs  onvif_xsd.rs  soap_envelop.rs
source/edge/crates/onvif-client/tests/: onvif_config.yaml
source/edge/crates/snapshot-client/: Cargo.toml
source/edge/crates/snapshot-client/src/: constants.rs  lib.rs  snapshot_handler.rs
source/edge/crates/snapshot-traits/: Cargo.toml
source/edge/crates/snapshot-traits/src/: lib.rs
source/edge/crates/streaming-traits/: Cargo.toml
source/edge/crates/streaming-traits/src/: error.rs  lib.rs
source/edge/crates/video-analytics-client/: Cargo.toml
source/edge/crates/video-analytics-client/src/: constants.rs  lib.rs  video_analytics_client.rs
source/edge/crates/webrtc-client/: Cargo.toml
source/edge/crates/webrtc-client/src/: client.rs  constants.rs  error.rs  lib.rs  signaling.rs  signaling_client.rs  state_machine.rs  webrtc_client.rs
source/edge/crates/ws-discovery-client/: Cargo.toml
source/edge/crates/ws-discovery-client/src/: lib.rs
source/edge/crates/ws-discovery-client/src/client/: hash.rs  mod.rs  ws_discovery_client.rs
source/edge/crates/ws-discovery-client/src/wsdl_rs/: mod.rs  ws_discovery.rs
(+797 files in other folders)
