# This Cargo.toml file sets values for the entire workspace.
# The crates built in this workspace can inherit dependenices and settings from this file.
# https://doc.rust-lang.org/cargo/reference/workspaces.html
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
# Set debug to 2 for more output
debug = 1

[profile.release]
debug = 0

# Set depenency versions for the project, crates in this workspace can inherit
[workspace.dependencies]
# local crates
device-traits = { path = "./crates/device-traits" }
mqtt-client = { path = "./crates/mqtt-client"}
iot-connections = { path = "./crates/iot-connections"}
iot-client = { path = "./crates/iot-client"}

# non-local crates
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = "0.7.7"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["fmt","std","json","env-filter"]}
tracing-appender = "0.2"
async-trait = "0.1.64"
mockall = "0.13.0"
jsonschema = "0.24.0"
serde = {version = "^1.0.152", features = ["rc"]}
serde_json = "1.0"
serde_derive = "^1.0.152"
rumqttc = "0.23.0"
thiserror = "1.0.24"
anyhow = "1"
clap = { version = "^4.2", features = ["cargo", "derive", "env"] }
config = "0.14.0"
once_cell = "1.17.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-types = "1.0"
aws-credential-types = "1.2.0"
aws-sigv4 = "1.0"
aws-smithy-http = "0.60"
aws-smithy-types = "1.0"
chrono = "0.4.30"
hex = "0.4.3"
http = "1"
url-escape = "0.1.1"
# Use rustls-tls crypto library rather than OpenSSL (C dependency which is the default)
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls","json","stream"]}
