[package]
name = "device-traits"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
async-trait.workspace = true
mockall.workspace = true
anyhow.workspace = true
serde_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
config.workspace = true
thiserror.workspace = true
once_cell.workspace = true