[package]
name = "event-processor"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
quickxml_to_serde.workspace = true
quick-xml.workspace = true
chrono.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mockall.workspace = true

# internal dependencies
streaming-traits.workspace = true
device-traits.workspace = true
mqtt-client.workspace = true

