[package]
name = "gstreamer-pipeline"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
event-processor.workspace = true
iot-client.workspace = true
video-analytics-client.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
mockall.workspace = true
gstreamer.workspace = true
gstreamer-app.workspace = true
gstreamer-rtsp.workspace = true
gstreamer-rtp.workspace = true
gstreamer-video.workspace = true
gstreamer-base.workspace = true
glib.workspace = true
queues.workspace = true
time.workspace = true
xmlparser.workspace = true
serde_json.workspace = true
base64.workspace = true
serde.workspace = true
serde_bytes.workspace = true
crossbeam-channel.workspace = true
rusqlite.workspace = true
bincode.workspace = true
fs_extra.workspace = true

# Internal dependencies
device-traits.workspace = true
streaming-traits.workspace = true

[features]
sd-card-catchup = []

