[package]
name = "http-client"
version.workspace = true
edition.workspace = true

publish = false
 
[dependencies]
reqwest.workspace = true
hex.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
mockall.workspace = true
thiserror.workspace = true
tokio.workspace = true
url-escape.workspace = true
sha256.workspace = true
base64.workspace = true
http-auth.workspace = true
http = "0.2.8"