[package]
name = "iot-client"
version.workspace = true
edition.workspace = true

publish = false
 
[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
mockall.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
aws-smithy-http.workspace = true
aws-smithy-types.workspace = true
http.workspace = true
url-escape.workspace = true
aws-config.workspace = true
aws-types.workspace = true
aws-credential-types.workspace = true
aws-sigv4.workspace = true

# internal dependencies
device-traits.workspace = true