[package]
name = "iot-connections"
version = "0.1.0"
edition = "2021"

publish = false

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
config.workspace = true
serde_derive.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
rumqttc.workspace = true
tracing.workspace = true

device-traits.workspace = true
mqtt-client.workspace = true

[dev-dependencies]
mockall.workspace = true
