[package]
name = "mqtt-client"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
rumqttc.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
device-traits.workspace = true
serde_derive.workspace = true
serde.workspace = true
leaky-bucket = "1.1.2"

[dev-dependencies]
rumqttd = "0.19.0"
portpicker = "0.1"
serial_test = "3.1.1"
clap.workspace = true
config = "0.14.0"
