[package]
name = "onvif-client"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
reqwest.workspace = true
hex.workspace = true
async-trait.workspace = true
config.workspace = true
device-traits.workspace = true
streaming-traits.workspace = true
http-client.workspace = true
tracing.workspace = true
tokio.workspace = true
mockall.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
http = "0.2.8"
regex = "1"

# used for serialization
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
xmltree = "0.10.3"
xml-rs = "0.8.19"
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true

# used for creating digest
http-auth = "0.1.8"

# used for calculating onvif password hash
md5 = "0.7.0"
base64 = "0.21.0"

[dev-dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }
