[package]
name = "ws-discovery-client"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
reqwest.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
futures = "0.3.30"
futures-core = "0.3.8"
futures-util = "0.3.30"
tokio-stream = "0.1"
url = "2.2.1"
uuid = { version = "0.8.1", features = ["v4"] }
percent-encoding = "2.1.0"

[dev-dependencies]
futures-util = "0.3.8"
